src/parser/expr/snapshots/hulk_compiler__parser__expr__binary__tests__parser_snapshot_as.snap
---
source: src/parser/expr/binary.rs
expression: ast
---
node:
  As:
    expr:
      node:
        Literal:
          node:
            Number: 1
          span:
            start: 9
            end: 10
      span:
        start: 9
        end: 10
    type_name: Number
span:
  start: 0
  end: 3
