src/parser/expr/snapshots/hulk_compiler__parser__expr__binary__tests__parser_snapshot_comparison.snap
---
source: src/parser/expr/binary.rs
expression: ast
---
node:
  Binary:
    left_expr:
      node:
        Literal:
          node:
            Number: 1
          span:
            start: 9
            end: 10
      span:
        start: 9
        end: 10
    op:
      node: GreaterEqual
      span:
        start: 11
        end: 13
    right_expr:
      node:
        Literal:
          node:
            Number: 5
          span:
            start: 14
            end: 15
      span:
        start: 14
        end: 15
span:
  start: 9
  end: 15
