src/parser/expr/snapshots/hulk_compiler__parser__expr__binary__tests__parser_snapshot_is.snap
---
source: src/parser/expr/binary.rs
assertion_line: 270
expression: ast
---
node:
  Is:
    expr:
      node:
        Literal:
          node:
            Number: 1
          span:
            start: 9
            end: 10
      span:
        start: 9
        end: 10
    type_name: Number
span:
  start: 9
  end: 20
